tests/warnings/iprange6.stderr
warning: This range will yeild no values: IP1 >= IP2
 --> tests/warnings/iprange6.rs:4:23
  |
4 |     let _ = iprange6!("2001:db8::32:ffff", "2001:db8::32:23");
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: This iterator requires the lower IP value first in it's arguments list.

error: invalid IP address syntax
 --> tests/warnings/iprange6.rs:7:23
  |
7 |     let _ = iprange6!("2001:db8::32::ffff", "2001:db8::32:23");
  |                       ^^^^^^^^^^^^^^^^^^^^
